--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cpr": "^0.4.3",
     "deasync": "^0.1.3",
     "ether-pudding": "1.0.4",
+    "ethersim": "git://github.com/tcoulter/EtherSim.git",
     "finalhandler": "^0.4.0",
     "gaze": "^0.5.2",
     "jsmin": "^1.0.1",
+    "json-rpc2": "^1.0.2",
     "lodash": "^3.10.1",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
@@ -25,13 +27,12 @@
     "rimraf": "^2.4.3",
     "serve-static": "^1.10.0",
     "solc": "^0.1.6",
+    "temp": "^0.8.3",
     "uglify-js": "^2.5.0",
     "web3": "0.14.0",
-    "yargs": "^3.27.0",
-    "temp": "^0.8.3"
+    "yargs": "^3.27.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "bin": {
     "truffle": "./truffle.bash",
     "truffle-exec": "./truffle-exec.bash"
